--- a/Code/Makefile
+++ b/Code/Makefile
@@ -1,34 +1,26 @@
-OBJS	= main.o proposition.o premisse.o regle.o baseconnaissance.o engine.o fileio.o
-SOURCE	= main.c proposition.c premisse.c regle.c baseconnaissance.c engine.c fileio.c
-HEADER	= list_structs.h proposition.h premisse.h regle.h baseconnaissance.h engine.h fileio.h
-OUT	= PROJETLO21
-CC	 = gcc
-FLAGS	 = -g -c -Wall
+CC = gcc
 
-all: $(OBJS)
-	$(CC) -g $(OBJS) -o $(OUT)
+BIN = ./bin/
 
-main.o: main.c
-	$(CC) $(FLAGS) main.c
+SRC = ./src/
 
-proposition.o: proposition.c
-	$(CC) $(FLAGS) proposition.c
+INC = ./include/
 
-premisse.o: premisse.c
-	$(CC) $(FLAGS) premisse.c
-
-regle.o: regle.c
-	$(CC) $(FLAGS) regle.c
-
-baseconnaissance.o: baseconnaissance.c
-	$(CC) $(FLAGS) baseconnaissance.c
-
-engine.o: engine.c
-	$(CC) $(FLAGS) engine.c
-
-fileio.o: fileio.c
-	$(CC) $(FLAGS) fileio.c
-
-
-clean:
-	rm -f $(OBJS) $(OUT)
+$(BIN)LO21BF: $(BIN)main.o $(BIN)proposition.o $(BIN)premisse.o $(BIN)regle.o $(BIN)baseconnaissance.o $(BIN)engine.o $(BIN)fileio.o
+	$(CC) -o $(BIN)LO21BF $(BIN)main.o $(BIN)proposition.o $(BIN)premisse.o $(BIN)regle.o $(BIN)baseconnaissance.o $(BIN)engine.o $(BIN)fileio.o
+$(BIN)main.o : $(SRC)main.c $(INC)list_structs.h
+	$(CC) -c $(SRC)main.c
+$(BIN)proposition.o : $(SRC)proposition.c $(INC)proposition.h $(INC)list_structs.h
+	$(CC) -c $(SRC)proposition.c
+$(BIN)premisse.o : $(SRC)premisse.c $(INC)premisse.h $(INC)list_structs.h
+	$(CC) -c $(SRC)premisse.c
+$(BIN)regle.o : $(SRC)regle.c $(INC)regle.h $(INC)list_structs.h
+	$(CC) -c $(SRC)regle.c
+$(BIN)baseconnaissance.o : $(SRC)baseconnaissance.c $(INC)baseconnaissance.h $(INC)list_structs.h
+	$(CC) -c $(SRC)baseconnaissance.c
+$(BIN)engine.o : $(SRC)engine.c $(INC)engine.h $(INC)list_structs.h
+	$(CC) -c $(SRC)engine.c
+$(BIN)fileio.o : $(SRC)fileio.c $(INC)fileio.h
+	$(CC) -c $(SRC)fileio.c
+clean :
+	rm edit $(BIN)main.o $(BIN)proposition.o $(BIN)premisse.o $(BIN)regle.o $(BIN)baseconnaissance.o $(BIN)engine.o $(BIN)fileio.o
